--- a/client/src/styles/base/_typography.scss
+++ b/client/src/styles/base/_typography.scss
@@ -1,69 +1,78 @@
-%heading{
-    font-family: $font-primary;
-    font-weight: 400;
+%heading {
+  font-family: $font-primary;
+  font-weight: 400;
 }
 
-.heading-1{
-    text-transform: uppercase;
+.heading-1 {
+  text-transform: uppercase;
 
-    &--main{
-        font-family: $font-primary;
-        font-size: 5rem;
-        font-weight: 700;
-        word-spacing: 0.2rem;
-        letter-spacing: 0rem;
-        line-height: 1.5;
-        display: block;
-        animation: moveToLeft 3s ease 3s;
-        animation-fill-mode: backwards;
-        @media only screen and (max-width: $bp-smallest) {
-            font-size: 3rem;
-        }
-    }
-    
-    
-    &--sub{
-        font-family: $font-primary;
-        color: $color-primary;
-        display: block;
-        word-spacing: 1rem;
-        font-size: 3rem;
-        font-weight: 600;
-        letter-spacing: 0.45rem;
-        line-height: 2;
-        margin-bottom: 4rem;
-        animation: moveToRight 3s ease 3s;
-        animation-fill-mode: backwards;
-        @media only screen and (max-width: $bp-smallest) {
-            font-size: 2rem;
-            word-spacing: 0.2rem;
-            letter-spacing: 0.25rem;
-        }
-    }
-}
-
-.heading-2{
-    padding-top: 10rem;
-    text-transform: uppercase;
+  &--main {
     font-family: $font-primary;
-    font-size: 5rem;
+    font-size: 7rem;
     font-weight: 700;
-    line-height: 1;
-    text-align: center;
+    word-spacing: 0.2rem;
+    letter-spacing: 0rem;
+    line-height: 1.5;
+    display: block;
+    animation: moveToLeft 3s ease 3s;
+    animation-fill-mode: backwards;
+    color: $color-primary-5;
+    &-light {
+      color: $color-grey-1;
+    }
+    @media only screen and (max-width: $bp-smallest) {
+      font-size: 3rem;
+    }
+  }
 
-    &--dark{
-        color: $color-black;
+  &--sub {
+    font-family: $font-primary;
+    color: $color-primary-3;
+    display: block;
+    word-spacing: 1rem;
+    font-size: 4rem;
+    font-weight: 600;
+    letter-spacing: 0.45rem;
+    line-height: 2;
+    margin-bottom: 4rem;
+    animation: moveToRight 3s ease 3s;
+    animation-fill-mode: backwards;
+    @media only screen and (max-width: $bp-smallest) {
+      font-size: 2rem;
+      word-spacing: 0.2rem;
+      letter-spacing: 0.25rem;
     }
-    &--light{
-        color: $color-grey-1;
-    }
-    
+  }
 }
-.heading-3{
-    @extend %heading;
-    line-height: 1;
+
+.heading-2 {
+  text-transform: uppercase;
+  font-family: $font-primary;
+  font-size: 2rem;
+  font-weight: 700;
+  line-height: 1;
+  text-align: center;
+
+  &--dark {
+    color: $color-black;
+  }
+  &--light {
+    color: $color-white;
+  }
+  &--blue {
+    color: $color-primary-3;
+  }
 }
-.heading-4{
-    @extend %heading;
-    font-size: 3rem;
+.heading-3 {
+  @extend %heading;
+  line-height: 1;
+  font-size: 2rem;
+  color: $color-primary-5;
+}
+.heading-4 {
+  @extend %heading;
+  font-size: 4rem;
+  &--light {
+    color: $color-white;
+  }
 }
