--- a/client/src/styles/components/_button.scss
+++ b/client/src/styles/components/_button.scss
@@ -1,63 +1,57 @@
-.btn{
-    justify-self: center;
-    position: relative;
-    border: none;
-    border-radius: 10rem;
-    padding: 1rem 3rem;
-    font-size: 1.6rem;
-    text-decoration: none; 
-    text-transform: uppercase;
-    word-spacing: .5rem;
-    cursor: pointer;
-    display: inline-block;
-    transition: all .2s;
-    -webkit-transition: all .2s;
-    
-    &--primary{
-        background-color: $color-primary-dark;
-        color: $color-white;
-        font-size: 2rem;
-        font-weight: 800;
-        text-shadow: 0px 0px 5px rgba(0,0,0,.4);
-        box-shadow: 2px 2px 5px rgba(0,0,0,.5);    
-        
-    }
+.btn {
+  justify-self: center;
+  position: relative;
+  border: none;
+  border-radius: 10rem;
+  padding: 1.5rem 4rem;
+  font-size: $font-M;
+  text-decoration: none;
+  text-transform: uppercase;
+  word-spacing: 0.5rem;
+  cursor: pointer;
+  display: inline-block;
+  transition: all 0.2s;
+  -webkit-transition: all 0.2s;
 
-    &--secundary{
-        background-color: $color-secundary-dark;
-        color: $color-black;
-        font-size: 2rem;
-        font-weight: 800; 
-        box-shadow: 1px 1px 5px rgba(0,0,0,.7);
-        &:hover{
-            background-color: $color-black;
-            color: $color-secundary-dark;
-            box-shadow: 0px 0px 5px rgba($color-secundary-dark,.5);
-        }
-    }
+  &--primary {
+    background-color: $color-primary-3;
+    color: $color-white;
+    font-weight: 800;
+    text-shadow: 0px 0px 5px rgba(0, 0, 0, 0.4);
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
+  }
 
-    &:hover{
-        // transform: translateY(-3px);
-        // box-shadow: 5px 5px 15px rgba(0,0,0,.5);
+  &--CTA {
+    background-color: $color-primary-2;
+    color: $color-primary-5;
+    font-weight: 800;
+    box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.7);
+    &:hover {
+      background-color: $color-primary-5;
+      color: $color-primary-2;
+      box-shadow: 0px 0px 5px rgba($color-black, 0.5);
     }
-    &:active{
-        transform: translateY(-1px);
-        box-shadow: 1px 1px 5px rgba(0,0,0,.5);
-    }
-    &--animated{
-        animation: fadeinup 1s ease-out 5s;
-        animation-fill-mode: backwards;
+  }
 
-    }    
+  &:hover {
+    transform: translateY(-3px);
+    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.5);
+  }
+  &:active {
+    transform: translateY(-1px);
+    box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.5);
+  }
+  &--animated {
+    animation: fadeinup 1s ease-out 5s;
+    animation-fill-mode: backwards;
+  }
 
-    &--icon{
-        stroke-width: 0rem;
-        stroke: currentColor;
-        height: 2rem;
-        width: 2rem;
-        fill: currentColor;
-        margin-left: 1rem;
-    }
-    
-
+  &--icon {
+    stroke-width: 0rem;
+    stroke: currentColor;
+    height: 2rem;
+    width: 2rem;
+    fill: currentColor;
+    margin-left: 1rem;
+  }
 }
