--- a/client/src/styles/components/_navigation-bar.scss
+++ b/client/src/styles/components/_navigation-bar.scss
@@ -1,51 +1,73 @@
-.navigation-bar{
-    position: fixed;
-    top: 0px;
-    left: 0px;
-    border: none;
-    height: 7rem;
-    width: 100%; 
-    background-color: rgba($color-grey-4, .5);
-    color: white;
-    box-shadow: 1px 0 10px rgba($color-black, .8);
-    z-index: 1;
+.navigation-bar {
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  border: none;
+  height: 7rem;
+  width: 100%;
+  background-color: $color-white;
+  color: $color-white;
+  box-shadow: $shadow-M;
+  z-index: 5;
 
-    &__logo{
-        position: absolute;
-        top: 0;
-        left: 0;
-        margin-left: 3%;
-        padding: 5px 10px;
-        height: 100%;
+  &__logo {
+    position: absolute;
+    top: 0;
+    left: 0;
+    margin-left: 3%;
+    padding: 5px 10px;
+    height: 100%;
+  }
+  &__index {
+    position: absolute;
+    top: 0%;
+    right: 0;
+    margin-right: 0.5rem;
+    height: 100%;
+    list-style: none;
+    color: $color-primary-5;
+    display: flex;
+    align-items: center;
+
+    &--item {
+      position: relative;
+      padding: 0 2rem;
+      height: 100%;
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+
+      & a.router-link-exact-active {
+        color: $color-primary-3;
+      }
     }
-    &__index{
-        position: absolute;
-        top: 0%;
-        right: 0;
-        margin-right: .5rem;
-        height: 100%;
-        list-style: none;
-        color: currentColor;
-        display: flex;
-        align-items: center;
-        
-        &--item{
-            position: relative;
-            padding: 0 2rem;
-            height: 100%;
-            display: inline-flex;
-            align-items: center;
-            justify-content: center;
-        }
-        &--link{
-            position: relative;
-            display: block;
-            color: currentColor;
-            font-size: 1.8rem;
-            font-weight: 400;
-            text-decoration: none;
-            text-transform: uppercase;
-            cursor: pointer;
-        }
+    &--link {
+      position: relative;
+      display: block;
+      color: currentColor;
+      font-size: 1.8rem;
+      font-weight: 600;
+      text-decoration: none;
+      text-transform: uppercase;
+      cursor: pointer;
     }
+  }
+  &__flags {
+    position: relative;
+    padding: 0 2rem;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+
+    &--lang {
+      height: 35%;
+      cursor: pointer;
+
+      &:hover {
+        transform: scale(1.1);
+        transition: $transition-fast;
+      }
+    }
+  }
 }
