--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -8,6 +8,8 @@
 @import "base/typography";
 
 @import "components/button";
+@import "components/features";
+@import "components/in-numbers";
 @import "components/navigation-bar";
 
 
